@@ -2,6 +2,8 @@ package com.sanjittech.hms.filter;
 
 import com.sanjittech.hms.util.JwtUtil;
 import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.JwtException;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -14,6 +16,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -38,31 +41,36 @@ public class JwtFilter extends OncePerRequestFilter {
             String token = authHeader.substring(7);
             System.out.println("🔐 Extracted JWT Token: " + token);
 
-            if (jwtUtil.validateToken(token)) {
-                Claims claims = jwtUtil.extractAllClaims(token);
-                String username = claims.getSubject();
-                String role = claims.get("role", String.class);
+            try {
+                if (jwtUtil.validateToken(token)) {
+                    Claims claims = jwtUtil.extractAllClaims(token);
+                    String username = claims.getSubject();
+                    String role = claims.get("role", String.class);
 
-                System.out.println("✅ Parsed JWT - Username: " + username + ", Role: " + role);
+                    System.out.println("✅ Parsed JWT - Username: " + username + ", Role: " + role);
 
-                List<GrantedAuthority> authorities =
-                        List.of(new SimpleGrantedAuthority("ROLE_" + role)); // Spring Security expects ROLE_ prefix
+                    List<GrantedAuthority> authorities = Collections.singletonList(
+                            new SimpleGrantedAuthority("ROLE_" + role)
+                    );
 
-                UsernamePasswordAuthenticationToken authToken =
-                        new UsernamePasswordAuthenticationToken(username, null, authorities);
+                    UsernamePasswordAuthenticationToken authToken =
+                            new UsernamePasswordAuthenticationToken(username, null, authorities);
 
-                SecurityContextHolder.getContext().setAuthentication(authToken);
+                    SecurityContextHolder.getContext().setAuthentication(authToken);
 
-                // ✅ ADD THIS LOG HERE
-                System.out.println("✅ Security Context: " + SecurityContextHolder.getContext().getAuthentication());
-            } else {
-                System.out.println("❌ JWT is invalid");
+                    System.out.println("✅ SecurityContext set for user: " + username);
+                }
+            } catch (ExpiredJwtException e) {
+                System.out.println("⛔ JWT expired: " + e.getMessage());
+            } catch (JwtException e) {
+                System.out.println("❌ JWT is invalid: " + e.getMessage());
+            } catch (Exception e) {
+                System.out.println("⚠️ Error parsing JWT: " + e.getMessage());
             }
         } else {
-            System.out.println("⚠️ No Bearer token present");
+            System.out.println("⚠️ No Bearer token present in Authorization header.");
         }
 
         filterChain.doFilter(request, response);
     }
 }
-
